--- a/index.html
+++ b/index.html
@@ -3,9 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Sign-up</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="left">
+            <div class="img-container">
+                <img src="img/ian-schneider-0qpPV5nrhwo-unsplash.jpg" alt="Sample Image">
+            </div>
+        </div>
+
+        <div class="right">
+            <div class="signup-text">
+                <p>This is not a real online service! You know you need something like this in your life to help you
+                    realize your deepest dreams.<br/>Sign up now to get started
+                </p>
+                <p>
+                    You <span id="emphasis">know</span> you want to.
+                </p>
+            </div>
+
+            <div class="form-details">
+                <fieldset>
+                    <legend>Let's do this!</legend>
+                    <form action="" method="GET">
+                        <label for="first-name">FIRST NAME</label>
+                        <input type="text" id="first-name" name="first-name" placeholder="ex- John" required>
+
+                        <label for="last-name">LAST NAME</label>
+                        <input type="text" id="last-name" name="last-name" placeholder="ex- Smith" required>
+                        
+                        <label for="email">EMAIL</label>
+                        <input type="email" id="email" name="email" placeholder="ex- jsmith@example.com" required>
+
+                        <label for="number">PHONE NUMBER</label>
+                        <input type="number" id="number" name="number" placeholder="ex- 9821786312" maxlength="10">
+
+                        <label for="pwd">PASSWORD</label>
+                        <input type="password" id="pwd" name="pwd" required>
+
+                        <label for="confirm-pwd">CONFIRM PASSWORD</label>
+                        <input type="password" id="confirm-pwd" name="confirm-pwd" required>
+                    </form>
+                </fieldset>
+            </div>
+
+            <div class="form-buttons">
+                <button type="submit">Create Account</button>
+                <p>Already have an account? <a href="">Log in</a></p>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
