Add header and footer divs to left side of page and change img to be background image

--- a/index.html
+++ b/index.html
@@ -8,16 +8,22 @@
 </head>
 <body>
     <div class="container">
-        <div class="left">
-            <img src="img/ian-schneider-0qpPV5nrhwo-unsplash.jpg" alt="Sample Image">
+        <div class="left">`
+            <div class="img-header">
+                <img src="resources/img/odin-lined.png" alt="header" id="header"></img>
+                <p class="left-p">Odin</p>
+            </div>
+            <div class="credit-footer">
+                <p class="credit">Photo by <a href="https://unsplash.com/@goian">Ian Schneider</a> on <a href="https://unsplash.com/photos/woman-standing-infront-of-aquarium-with-shoal-of-fish-0qpPV5nrhwo">Unsplash</a></p>
+            </div>
         </div>
 
         <div class="right">
             <div class="signup-text">
-                <p>This is not a real online service! You know you need something like this in your life to help you
+                <p class="right-p">This is not a real online service! You know you need something like this in your life to help you
                     realize your deepest dreams.<br/>Sign up now to get started
                 </p>
-                <p>
+                <p class="right-p">
                     <br/>You <span id="emphasis">know</span> you want to.
                 </p>
             </div>
@@ -66,7 +72,7 @@
 
             <div class="form-buttons">
                 <button type="submit" class="submit-btn">Create Account</button>
-                <p>Already have an account? <a href="">Log in</a></p>
+                <p class="right-p">Already have an account? <a href="">Log in</a></p>
             </div>
         </div>
     </div>
