--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <p class="left-p">Odin</p>
             </div>
             <div class="credit-footer">
-                <p class="credit">Photo by <a href="https://unsplash.com/@goian">Ian Schneider</a> on <a href="https://unsplash.com/photos/woman-standing-infront-of-aquarium-with-shoal-of-fish-0qpPV5nrhwo">Unsplash</a></p>
+                <p class="credit">Photo by <a href="https://unsplash.com/@goian" target="_blank">Ian Schneider</a> on <a href="https://unsplash.com/photos/woman-standing-infront-of-aquarium-with-shoal-of-fish-0qpPV5nrhwo" target="_blank">Unsplash</a></p>
             </div>
         </div>
 
