--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="right">
             <div class="signup-text">
                 <p class="right-p">This is not a real online service! You know you need something like this in your life to help you
-                    realize your deepest dreams.<br/>Sign up now to get started
+                    realize your deepest dreams.<br/>Sign up now to get started.
                 </p>
                 <p class="right-p">
                     <br/>You <span id="emphasis">know</span> you want to.
@@ -34,45 +34,45 @@
 
                     <div class="form-row">
                         <div class="group-labels">
-                            <label for="first-name">FIRST NAME</label>
-                            <input type="text" id="first-name" name="first-name" placeholder="ex- John" required>
+                            <label for="first-name">FIRST NAME*</label>
+                            <input type="text" id="first-name" name="first-name" placeholder="John" required>
                         </div>
                         
                         <div class="group-labels">
-                            <label for="last-name">LAST NAME</label>
-                            <input type="text" id="last-name" name="last-name" placeholder="ex- Smith" required>
+                            <label for="last-name">LAST NAME*</label>
+                            <input type="text" id="last-name" name="last-name" placeholder="Smith" required>
                         </div>
                     </div>
 
                     <div class="form-row">
                         <div class="group-labels">
-                            <label for="email">EMAIL</label>
-                            <input type="email" id="email" name="email" placeholder="ex- jsmith@example.com" required>
+                            <label for="email">EMAIL*</label>
+                            <input type="email" id="email" name="email" placeholder="jsmith@example.com" required>
                         </div>
 
                         <div class="group-labels">
                             <label for="number">PHONE NUMBER</label>
-                            <input type="number" id="number" name="number" placeholder="ex- 9821786312" maxlength="10">
+                            <input type="text" id="number" name="number" placeholder="9XXXXXX692" pattern="[6789][0-9]{9}" title="Please enter valid phone number">
                         </div>
                     </div>
 
                     <div class="form-row">
                         <div class="group-labels">
-                            <label for="pwd">PASSWORD</label>
-                            <input type="password" id="pwd" name="pwd" required>
+                            <label for="pwd">PASSWORD*</label>
+                            <input type="password" id="pwd" name="pwd" pattern="[A-Za-z0-9]{8,30}" title="Password length should be between 8-30 characters" required>
                         </div>
 
                         <div class="group-labels">
-                            <label for="confirm-pwd">CONFIRM PASSWORD</label>
+                            <label for="confirm-pwd">CONFIRM PASSWORD*</label>
                             <input type="password" id="confirm-pwd" name="confirm-pwd" required>
                         </div>
                     </div>
-                </form>
             </fieldset>
 
             <div class="form-buttons">
                 <button type="submit" class="submit-btn">Create Account</button>
-                <p class="right-p">Already have an account? <a href="">Log in</a></p>
+                <p class="right-p">Already have an account? <a id="login" href="">Log in</a></p>
+            </form>
             </div>
         </div>
     </div>
